# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.5
#

2004-11-13 04:26:37 GMT	John Goerzen <jgoerzen@complete.org>	patch-23

    Summary:
      Added experimental printf
    Revision:
      missingh--head--0.5--patch-23


    new files:
     libsrc/MissingH/Printf.hs

    modified files:
     ChangeLog


2004-10-29 13:37:13 GMT	John Goerzen <jgoerzen@complete.org>	patch-22

    Summary:
      Disabled hugs tests
    Revision:
      missingh--head--0.5--patch-22


    modified files:
     ChangeLog debian/changelog debian/control debian/rules


2004-10-29 13:27:13 GMT	John Goerzen <jgoerzen@complete.org>	patch-21

    Summary:
      Added build-dep-indep in libhugs-hunit-dev
    Revision:
      missingh--head--0.5--patch-21


    new files:
     libsrc/MissingH/Cmd/.arch-ids/=id

    modified files:
     ChangeLog debian/changelog debian/control

    new directories:
     libsrc/MissingH/Cmd libsrc/MissingH/Cmd/.arch-ids


2004-10-27 13:42:06 GMT	John Goerzen <jgoerzen@complete.org>	patch-20

    Summary:
      Updated Setup.description version
    Revision:
      missingh--head--0.5--patch-20


    modified files:
     ChangeLog Setup.description


2004-10-27 13:40:32 GMT	John Goerzen <jgoerzen@complete.org>	patch-19

    Summary:
      Added splitRe, subRe
    Revision:
      missingh--head--0.5--patch-19


    modified files:
     ChangeLog debian/changelog libsrc/MissingH/Str.hs notes.txt
     testsrc/Strtest.hs


2004-10-27 01:48:49 GMT	John Goerzen <jgoerzen@complete.org>	patch-18

    Summary:
      Removed testing program
    Revision:
      missingh--head--0.5--patch-18


    removed files:
     mailprint.hs

    modified files:
     ChangeLog


2004-10-27 01:48:35 GMT	John Goerzen <jgoerzen@complete.org>	patch-17

    Summary:
      Fixed bug in pipe (not closing write side in child)
    Revision:
      missingh--head--0.5--patch-17


    new files: